bk_ida/gobmkida/c3/stones_on_board
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/stones_on_board/src/engine/board.c:3132:6: error: use of undeclared identifier 'stones_on_board_stone_count_for_position'
if ( stones_on_board_stone_count_for_position != position_number ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/stones_on_board/src/engine/board.c:3134:1: error: use of undeclared identifier 'stones_on_board_white_stones'
stones_on_board_white_stones = 0; 
^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/stones_on_board/src/engine/board.c:3135:1: error: use of undeclared identifier 'stones_on_board_black_stones'
stones_on_board_black_stones = 0; 
^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/stones_on_board/src/engine/board.c:3143:1: error: use of undeclared identifier 'stones_on_board_black_stones'
stones_on_board_black_stones = ++v1; 
^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/stones_on_board/src/engine/board.c:3147:1: error: use of undeclared identifier 'stones_on_board_stone_count_for_position'
stones_on_board_stone_count_for_position = position_number; 
^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/stones_on_board/src/engine/board.c:3155:1: error: use of undeclared identifier 'stones_on_board_white_stones'
stones_on_board_white_stones = ++v2; 
^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/stones_on_board/src/engine/board.c:3159:1: error: use of undeclared identifier 'stones_on_board_black_stones'
stones_on_board_black_stones = ++v1; 
^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/stones_on_board/src/engine/board.c:3172:1: error: use of undeclared identifier 'stones_on_board_white_stones'
stones_on_board_white_stones = ++v2; 
^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/stones_on_board/src/engine/board.c:3177:6: error: use of undeclared identifier 'stones_on_board_black_stones'
v1 = stones_on_board_black_stones; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/stones_on_board/src/engine/board.c:3178:6: error: use of undeclared identifier 'stones_on_board_white_stones'
v2 = stones_on_board_white_stones; 
     ^
10 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/stones_on_board/src/obj/1/board.o] Error 1
